# anne-wizard

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE.LGPLv3  README.md  annewizard.desktop.in  annewizard.rc  build_linux.sh  build_mac.sh  build_windows  main.cpp  resources.qrc  setup.sh  wizard.cpp  wizard.h
assets/: anne.icns  anneacc.js  annehasher.icns  anneminer.icns  annewizard.icns
assets/annecrypto/: aanne.js  acrypto.js  autil.js
pages/: configpage.cpp  configpage.h  dbsetuppage.cpp  dbsetuppage.h  downloadpage.cpp  downloadpage.h  finalpage.cpp  finalpage.h  intropage.cpp  intropage.h  javapage.cpp  javapage.h  licensepage.cpp  licensepage.h  mariadbpage.cpp  mariadbpage.h  minerconfigpage.cpp  minerconfigpage.h  netconfigpage.cpp  netconfigpage.h
utils/: antorutils.cpp  antorutils.h  concurrent.h  dbmanager.cpp  dbmanager.h  filehandler.cpp  filehandler.h  javautils.cpp  javautils.h  jsutils.cpp  jsutils.h  mariautils.cpp  mariautils.h  netutils.cpp  netutils.h  osinfo.cpp  osinfo.h  systemutils.cpp  systemutils.h  utils.cpp  utils.h
